# RazerBatteryDisplay

./: Cargo.toml  README.md
.github/workflows/: windows.yml
src/: battery.rs  install.rs  main.rs  tray.rs  win.rs
