[package]
name = "razer-battery-display"
version = "0.1.1"
edition = "2024"
authors = ["Rique"]

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
